tests/hello_world_benchmark/deployment/deployment-patch.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: no-name
spec:
  template:
    spec:
      containers:
      - name: "hello-world-ben-deployment"
        imagePullPolicy: Always
